<resources>
    <string name="app_name">Mi primera app</string>
    <string name="telefono">Telefono:</string>
    <string name="registrarse">Registrarse</string>
    <string name="comienza">Comienza</string>
    <string name="inicia_una_nueva_aventura_con_whatsapp_temu_y_descubre_una_nueva_forma_de_ver_al_mundo">Inicia una nueva aventura con WhatsApp Temu y descubre una nueva forma de ver al mundo</string>
    <string name="whatsapp_temu">WhatsApp Temu</string>
    <string name="he_le_do_y_aceptado_las_pol_ticas_que_maneja_el_aplicativo_whatstemu">He leído y aceptado las políticas que maneja el aplicativo WhatsTemu</string>
    <string name="completa_los_datos_para_registrarse_en_el_aplicativo">Completa los datos para registrarse en el aplicativo.</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="tel_fono">Teléfono</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="la_aventura_esta_por_iniciar_por_favor_inicia_sesion">La aventura esta por iniciar, por favor inicia sesion</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="iniciar">Iniciar</string>
    <string name="recupera_tu_contraseña">Recupera tu contraseña</string>
    <string name="ingresa_con_google">Ingresa con Google</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="se_te_olvido_la_contraseña">¿Se te olvido la contraseña?</string>
    <string name="recuperala_ingresando_el_correo_registrado">Recuperala ingresando el correo registrado</string>
    <string name="correo_de_recuperacion">Correo de recuperacion</string>
    <string name="enviar">Enviar</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="correo_electr_nico">Correo Electrónico:</string>
    <string name="editar">Editar</string>
    <string name="juan_carlos_herrera_baron">Juan Carlos Herrera Baron</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion_menu_lateral">Abrir menú de navegación lateral</string>
</resources>