<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header con logo y título -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/logo_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/titulo_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/whatsapp_temu"
                android:textColor="@color/orange"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/texto_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completa_los_datos_para_registrarse_en_el_aplicativo"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <!-- Contenedor para los campos de entrada -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_nombre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:padding="9dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/input_apellido"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/apellido"
                android:inputType="textPersonName"
                android:padding="9dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/input_correo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:padding="9dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/input_telefono"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/tel_fono"
                android:inputType="phone"
                android:padding="9dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/input_contrasena"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/input_confirmar_contrasena"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/confirmar_contraseña"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Contenedor para el checkbox -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckedTextView
                android:id="@+id/check_politicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/he_le_do_y_aceptado_las_pol_ticas_que_maneja_el_aplicativo_whatstemu"
                android:padding="8dp" />
        </LinearLayout>

        <!-- Contenedor para el botón -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="36dp"
                android:backgroundTint="@color/orange"
                android:text="@string/registrarse"
                android:textColor="@color/white"
                app:strokeColor="@color/white"
                app:strokeWidth="4dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
