<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Contenedor para el logo y el título -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/logo_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/titulo_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/whatsapp_temu"
                android:textColor="@color/orange"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/titulo_recuperar_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/se_te_olvido_la_contraseña"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:id="@+id/imagen_emoji"
            android:layout_width="138dp"
            android:layout_height="140dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/wow_emoji_emo_emoticon_icon_178896" />

        <TextView
            android:id="@+id/texto_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/recuperala_ingresando_el_correo_registrado"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/input_correo_recuperacion"
            android:layout_width="318dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/correo_de_recuperacion"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:background="@drawable/rounded_corner"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_enviar"
            android:layout_width="156dp"
            android:layout_height="66dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@color/orange"
            android:text="@string/enviar"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            app:strokeColor="@color/white"
            app:strokeWidth="4dp" />

    </LinearLayout>

</ScrollView>
